# karenizer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: index.py
app/: config.py  main.py
app/dependencies/: schemas.py
app/routers/: apis.py  main_routes.py
app/services/: complaint_generator.py
app/templates/: index.html
templates/: index.html
