[project]
name = "karenizer"
version = "0.1.0"
description = "Transform grievances into legendary Karen-level complaint letters."
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
